<resources>
    <string name="app_name">MainPoint</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="name_of_place">Name of place</string>
    <string name="comments">Comments</string>
    <string name="default_place_name">Here I was at </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="list_of_places">List of places</string>
    <string name="save_place_title">save place</string>
    <string name="points_list">points list</string>
    <string name="map">Map</string>
    <string name="points_on_map_title">Points on the map</string>
    <string name="list_points_title">List of points</string>
    <string name="search_new_place_title">Search new place</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="login">Login</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="sign_out">Sign out</string>
    <string name="general_settings">Общие</string>
    <string name="add_point_photo_title">Фотографии</string>
    <string name="add_point_add_photo_button">+ Добавить фото</string>
    <string name="rational_image_perm">This sample will read an image from local storage to upload to Firebase Storage.</string>
    <string name="points_dont_exist">Нет точек</string>
    <string name="save_point_error">Saving error. Try to save this point again.</string>

</resources>
