<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_points"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_place_list"
            android:icon="@drawable/ic_list_points"
            android:title="@string/list_of_places" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/general_settings">
        <menu>

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
