<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_place"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/add_point_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_marginTop="-4dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:indeterminate="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_point_name_place_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/name_place_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_place"
                android:maxLines="2" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/comments_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/new_point_name_place_text_view"
            android:layout_marginTop="18dp">

            <EditText
                android:id="@+id/comments_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/comments"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/save_point_photo_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comments_text_input_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/save_point_photo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_point_photo_title"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/save_point_photo_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone"></LinearLayout>

            <Button
                android:id="@+id/save_point_add_photo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/add_point_add_photo_button"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/save_place_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/save_point_photo_main_layout"
            android:layout_marginTop="30dp"
            android:background="@drawable/state_button_back"
            android:text="@string/save_place_title"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@drawable/state_button_text_color"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>